# starling-voice-dictation

./: .gitignore  Info.plist  Install Starling.bat  Package.swift  README.md  SETUP.md  build-app.sh  corrections.json  install.ps1  pyproject.toml  run.ps1  setup.ps1
Sources/Starling/: App.swift  AudioRecorder.swift  DictationController.swift  HotkeyMonitor.swift  LevelMeterIcon.swift  LiveTranscripts.swift  LoginItem.swift  SessionStats.swift  SplashWindowController.swift  StatsView.swift  StatsWindowController.swift  StreamingTranscriber.swift  TextInjector.swift
starling/: __main__.py  assets.py  audio.py  constants.py  corrections.py  hotkey.py  inject.py  login_item.py  stats.py  stats_ui.py  streaming.py  transcriber.py  tray.py
